--- a/microservice2/pom.xml
+++ b/microservice2/pom.xml
@@ -29,6 +29,10 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 		</dependency>
@@ -69,6 +73,15 @@
 			<artifactId>springfox-swagger2</artifactId>
 			<version>2.2.2</version>
 			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.sixhours</groupId>
+			<artifactId>memcached-spring-boot-starter</artifactId>
+			<version>1.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-activemq</artifactId>
 		</dependency>
 	</dependencies>
 
